﻿1.15.32.alpha.1 - 15th May 2024
- Added a new option called 'Enhance flight map' ('Interface').  If enabled, you can customise the flight map (such as map scale, map position and icon size).  You can adjust the settings in the configuration panel.  Hold down ALT and drag the flight map to move it.
- Added flight times.

1.15.31 - 15th May 2024
- Added flight times.

1.15.30 - 8th May 2024
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.
- Added flight times.

1.15.29 - 1st May 2024
- Added custom class color support for 'Enhance tooltip' ('Interface') and 'Class colored frames' ('Frames').
- Update to bag item and bank item search box code.
- Added flight times.

1.15.28 - 24th April 2024
- Added flight times.

1.15.27 - 19th April 2024
- Added a new setting called 'Keep audio synced' ('System').  If checked, when you change the audio output device in your operating system, the game audio output device will change automatically.|n|nFor this to work, the game audio output device will be set to system default.
- Added flight times.

1.15.26 - 10th April 2024
- Added flight times.

1.15.25 - 3rd April 2024
- Updated for game version 1.15.2.
- Added flight times.

1.15.24 - 27th March 2024
- Updated deprecated functions.
- Added flight times.

1.15.23 - 20th March 2024
- Added flight times.

1.15.22 - 13th March 2024
- For 'Enhance minimap' ('Interface'), the 'Combine addon buttons' setting will now sort addon buttons alphabetically.
- Added flight times.

1.15.21 - 6th March 2024
- Added flight times.

1.15.20 - 28th February 2024
- Added flight times.

1.15.19 - 21st February 2024
- Updated ScrollFrameTemplate for Media.
- Added flight times.

1.15.18 - 14th February 2024
- For 'Enhanced quest log' ('Interface'), fixed an issue with showing quest level suffixes for non-English locales.
- Added flight times.

1.15.17 - 7th February 2024
- Updated for game version 1.15.1.