@@ -1,5 +1,6 @@
 ﻿1.15.32.alpha.1 - 15th May 2024
 - Added a new option called 'Enhance flight map' ('Interface').  If enabled, you can customise the flight map (such as map scale, map position and icon size).  You can adjust the settings in the configuration panel.  Hold down ALT and drag the flight map to move it.
+- For 'Enhance minimap', added support for Narcissus custom minimap button.
 - Added flight times.
 
 1.15.31 - 15th May 2024
